--- a/content/projects/marion-michele/index.mdx
+++ b/content/projects/marion-michele/index.mdx
@@ -1,10 +1,11 @@
 ---
-cover: "./marion-michele.jpg"
+cover: "./IMG_5637-2.jpg"
 date: "2017-12-05"
-title: "Marion Michele"
+title: "Apple Ring"
 areas:
   - Photography
   - Art
+  - SOFT CORE
 ---
 
 Hi! I hope you like this starter and enjoy working with it.
